--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         
             creado por Josue G.
         Colaboradores Maria Jose
-        idea de negocio Amiga de Maria Jose
+        idea de negocio Jessica
     </p>
   </header>
 
