--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
             creado por Josue G.
         Colaboradores Maria Jose
         idea de negocio Jessica
+        critica construcitiva Piero
     </p>
   </header>
 
