--- a/index.html
+++ b/index.html
@@ -271,7 +271,10 @@
   <button class="contacto-btn" onclick="abrirFormulario()" id="contacto">Contáctanos</button>
 
   <footer>
-    <p>&copy; 2025 Mens Hub - Todos los derechos reservados</p>
+    <p>&copy; Agradecemos con mucho orgullo y admiración a Jessica, mente brillante detrás de la idea original de Mens Hub.
+Su creatividad, visión y pasión por la moda masculina fueron el motor que dio inicio a este emprendimiento.
+
+"Cada prenda nace de una idea. La nuestra nació de Jessica."</p>
   </footer>
 
   <!-- Formulario emergente -->
