--- a/index.html
+++ b/index.html
@@ -216,7 +216,10 @@
   <section class="inicio">
     <h2>Bienvenidos a mi negocio</h2>
     <div class="descripcion">
-      <p>Mens Hub nace del deseo de ofrecer moda auténtica, fresca y poderosa para hombres con actitud.</p>
+      <p>Agradecemos con mucho orgullo y admiración a Jessica, mente brillante detrás de la idea original de Mens Hub.
+Su creatividad, visión y pasión por la moda masculina fueron el motor que dio inicio a este emprendimiento.
+
+"Cada prenda nace de una idea. La nuestra nació de Jessica."</p>
       <img src="https://d1fufvy4xao6k9.cloudfront.net/images/blog/posts/2024/07/hockerty_brown_cotton_polo_shirt_--ar_43_7910f81c-0c67-49c6-a350-b578061a1a81_1.jpg" alt="Moda masculina">
       <p>Nos enfocamos en diseñar ropa que exprese quién eres sin que digas una palabra.</p>
       <p>Cada prenda está pensada para resaltar tu estilo único y personalidad.</p>
