--- a/index.html
+++ b/index.html
@@ -274,10 +274,7 @@ Su creatividad, visión y pasión por la moda masculina fueron el motor que dio 
   <button class="contacto-btn" onclick="abrirFormulario()" id="contacto">Contáctanos</button>
 
   <footer>
-    <p>&copy; Agradecemos con mucho orgullo y admiración a Jessica, mente brillante detrás de la idea original de Mens Hub.
-Su creatividad, visión y pasión por la moda masculina fueron el motor que dio inicio a este emprendimiento.
-
-"Cada prenda nace de una idea. La nuestra nació de Jessica."</p>
+    <p>&copy; derechos reservador a industrias Lokuras"</p>
   </footer>
 
   <!-- Formulario emergente -->
