--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 <!-- Inglés -->
 <section id="ingles">
   <h2>Inglés</h2>
-  <p>(Contenido de inglés aquí...)</p>
+<img src="https://biodiversidad-3rotc-b.netlify.app/Imagen%20de%20WhatsApp%202025-07-15%20a%20las%2022.00.08_6ede9da3.jpg" alt="Descripción" style="display: block; margin: 0 auto;" />
 </section>
 
 <!-- Física -->
