--- a/index.html
+++ b/index.html
@@ -305,7 +305,11 @@
 <!-- Inglés -->
 <section id="ingles">
   <h2>Inglés</h2>
-<img src="https://biodiversidad-3rotc-b.netlify.app/Imagen%20de%20WhatsApp%202025-07-15%20a%20las%2022.00.08_6ede9da3.jpg" alt="Descripción" style="display: block; margin: 0 auto;" />
+<div id="ingles" style="text-align: center;">
+  <h2>Área de Inglés</h2>
+  <img src="https://biodiversidad-3rotc-b.netlify.app/Imagen%20de%20WhatsApp%202025-07-15%20a%20las%2022.00.08_6ede9da3.jpg" alt="Descripción de la imagen" width="900" height="900" />
+</div> 
+
 </section>
 
 <!-- Física -->
