--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 <header>
   <h1>proyecto interdiplinario </h1>
-  <p>creado por Josue Gracia 3B tecnico .</p>
+  <p>creado por Josue Gracia y Josue Villafuerte 3B tecnico .</p>
 </header>
 
 <nav>
@@ -187,7 +187,14 @@
     <li>Red trófica: conjunto de cadenas interconectadas que reflejan relaciones complejas en el ecosistema.</li>
   </ul>
 </section>
-<img src="https://biodiversidad-3rotc-b.netlify.app/1.jpg" alt="Bosque deforestado en Ecuador" width="900" height="500"/>
+<div style="text-align: center; max-width: 900px; margin: 0 auto;">
+  <img 
+    src="https://biodiversidad-3rotc-b.netlify.app/1.jpg" 
+    alt="Bosque deforestado en Ecuador" 
+    style="max-width: 100%; height: auto; display: inline-block;" 
+  />
+</div>
+
 
 
 <!-- Química -->
