--- a/index.html
+++ b/index.html
@@ -236,13 +236,14 @@
   <p><strong>Conclusión:</strong><br>
   El estudio de compuestos orgánicos en productos naturales es fundamental para entender la relación entre química y biodiversidad, promoviendo innovación, salud y conservación ambiental.</p>
 </section>
-  <div style="text-align: center; max-width: 900px; margin: 0 auto;">
+ <div style="text-align: center; max-width: 900px; margin: 30px auto;">
   <img 
     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRR4SatTtaEzE1ntNqm4veqPUrjS8tKvUq5tw&s" 
     alt="Imagen ilustrativa" 
     style="max-width: 100%; height: auto; display: inline-block;" 
   />
 </div>
+
 
 
 <!-- Matemáticas -->
