--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 <body>
 
 <header>
-  <h1>proyecto interdiplinario </h1>
-  <p>creado por Josue Gracia y Josue Villafuerte 3B tecnico .</p>
+  <h1>PROYECTO INTERDICIPLINARIO </h1>
+  <p>Creado por Josue Gracia y Josue Villafuerte 3B tecnico .</p>
 </header>
 
 <nav>
