--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
   <a href="#emprendimiento">Emprendimiento</a>
   <a href="#filosofia">Filosofía</a>
   <a href="#programacion">Programación</a>
+   <a href="#Sistema y redes">Sistema y redes </a>
+   <a href="#Ofimatica">Ofimatica </a>
 </nav>
 
 <!-- Biología -->
@@ -543,4 +545,5 @@
 
 </body>
 </html>
+
 
