--- a/index.html
+++ b/index.html
@@ -330,7 +330,9 @@
 
 </section>
 <!-- ofimatics -->
+  
 <section id="ofimatica">
+  <div class="area">
    <p>El análisis de redes comunitarias puede ser una herramienta valiosa para el monitoreo de la biodiversidad en zonas rurales, permitiendo una participación activa de la población local en la conservación y gestión de sus recursos naturales. Estas redes facilitan la recopilación de datos sobre especies, ecosistemas y amenazas, además de promover la conciencia ambiental y el sentido de pertenencia a la comunidad.</p>
   
   <h3>¿Cómo van a ser monitoreadas la biodiversidad en el lugar escogido?</h3>
@@ -609,6 +611,7 @@
 
 </body>
 </html>
+
 
 
 
