--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 <header>
   <h1>PROYECTO INTERDICIPLINARIO </h1>
-  <p>Creado por Josue Gracia y Josue Villafuerte 3B tecnico .</p>
+  <p>Creado por Josue Gracia , Jean Paulo Chinga y Josue Villafuerte 3B tecnico .</p>
 </header>
 
 <nav>
@@ -142,7 +142,7 @@
   <a href="#filosofia">Filosofía</a>
   <a href="#programacion">Programación</a>
    <a href="#Sistema y redes">Sistema y redes </a>
-   <a href="#Ofimatica">Ofimatica </a>
+   <a href="#ofimatica">ofimatica </a>
 </nav>
 
 <!-- Biología -->
@@ -331,10 +331,10 @@
 </section>
 <!-- ofimatics -->
   
-<section id="Ofimatica">
+<section id="ofimatica">
   <div class="area">
-     <h2>Ofimática</h2>
-   <p>El análisis de redes comunitarias puede ser una herramienta valiosa para el monitoreo de la biodiversidad en zonas rurales, permitiendo una participación activa de la población local en la conservación y gestión de sus recursos naturales. Estas redes facilitan la recopilación de datos sobre especies, ecosistemas y amenazas, además de promover la conciencia ambiental y el sentido de pertenencia a la comunidad.</p>
+  <h2>Ofimática</h2>
+  <p>El análisis de redes comunitarias puede ser una herramienta valiosa para el monitoreo de la biodiversidad en zonas rurales, permitiendo una participación activa de la población local en la conservación y gestión de sus recursos naturales. Estas redes facilitan la recopilación de datos sobre especies, ecosistemas y amenazas, además de promover la conciencia ambiental y el sentido de pertenencia a la comunidad.</p>
   
   <h3>¿Cómo van a ser monitoreadas la biodiversidad en el lugar escogido?</h3>
   <ul>
@@ -350,6 +350,26 @@
     <li><strong>Monitoreo a largo plazo:</strong> Las redes comunitarias pueden establecer un monitoreo continuo y a largo plazo, lo que permite detectar cambios en la biodiversidad y evaluar la efectividad de las acciones de conservación.</li>
   </ul>
 </div>
+
+<!-- Área: Sistemas y Redes -->
+<div class="area">
+  <h2>Sistemas y Redes</h2>
+  <h3>Impacto del e-waste en la biodiversidad</h3>
+  <p>El e-waste (residuos electrónicos) tiene un impacto negativo significativo en la biodiversidad, principalmente debido a la liberación de sustancias tóxicas que contaminan el suelo, el agua y el aire, afectando a plantas, animales y ecosistemas.</p>
+
+  <h4>Impacto en la biodiversidad:</h4>
+  <ul>
+    <li><strong>Contaminación del suelo:</strong> Los metales pesados y sustancias químicas presentes en el e-waste contaminan el suelo, reduciendo su fertilidad y afectando el crecimiento de las plantas, lo que puede alterar las cadenas alimentarias y llevar a la pérdida de especies vegetales.</li>
+    <li><strong>Contaminación del agua:</strong> Los contaminantes del e-waste pueden filtrarse a las aguas subterráneas y superficiales, afectando a la vida acuática y a las especies terrestres que dependen del agua.</li>
+    <li><strong>Efectos en la fauna:</strong> Los animales pueden verse afectados por la ingestión de sustancias tóxicas o por la pérdida de hábitats, lo que puede alterar las poblaciones y las interacciones entre especies.</li>
+    <li><strong>Alteración de ecosistemas:</strong> La contaminación por e-waste puede tener efectos en cascada en los ecosistemas, afectando a polinizadores, animales que se alimentan de plantas y otros niveles tróficos.</li>
+  </ul>
+
+  <h4>Problemas adicionales:</h4>
+  <p>Además del daño ambiental, el manejo inadecuado del e-waste representa riesgos para la salud humana y desafíos para la infraestructura tecnológica. En muchas comunidades, la falta de políticas de reciclaje adecuadas y el desconocimiento sobre el tratamiento seguro de estos residuos agravan el problema, haciendo necesario implementar soluciones sostenibles y campañas de educación ambiental.</p>
+</div>
+
+
 
 <!-- Área: Sistemas y Redes -->
 <div class="area">
@@ -612,6 +632,7 @@
 
 </body>
 </html>
+
 
 
 
