--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <a href="#emprendimiento">Emprendimiento</a>
   <a href="#filosofia">Filosofía</a>
   <a href="#programacion">Programación</a>
-   <a href="#Sistema y redes">Sistema y redes </a>
+   <a href="#Soporte tecnico ">Soporte tecnico </a>
    <a href="#ofimatica">ofimatica </a>
 </nav>
 
@@ -353,9 +353,9 @@
 
 
 
-<!-- Área: Sistemas y Redes -->
+<!-- Área: Soporte Tecnico  -->
 <div class="area">
-  <h2>Sistemas y Redes</h2>
+  <h2>Soporte tecnico </h2>
   <h3>Impacto del e-waste en la biodiversidad</h3>
   <p>El e-waste (residuos electrónicos) tiene un impacto negativo significativo en la biodiversidad, principalmente debido a la liberación de sustancias tóxicas que contaminan el suelo, el agua y el aire, afectando a plantas, animales y ecosistemas.</p>
 
@@ -614,6 +614,7 @@
 
 </body>
 </html>
+
 
 
 
