--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
   <a href="#programacion">Programación</a>
    <a href="#Soporte tecnico ">Soporte tecnico </a>
    <a href="#ofimatica">ofimatica </a>
+     <a href="#Sistema y Redes">sistema y redes </a>
 </nav>
 
 <!-- Biología -->
@@ -329,11 +330,11 @@
 </div> 
 
 </section>
-<!-- ofimatics -->
+<!-- Sistema y redes-->
   
-<section id="ofimatica">
+<section id="Sistema y redes">
   <div class="area">
-  <h2>Ofimática</h2>
+  <h2>Sistema y redes</h2>
   <p>El análisis de redes comunitarias puede ser una herramienta valiosa para el monitoreo de la biodiversidad en zonas rurales, permitiendo una participación activa de la población local en la conservación y gestión de sus recursos naturales. Estas redes facilitan la recopilación de datos sobre especies, ecosistemas y amenazas, además de promover la conciencia ambiental y el sentido de pertenencia a la comunidad.</p>
   
   <h3>¿Cómo van a ser monitoreadas la biodiversidad en el lugar escogido?</h3>
@@ -352,7 +353,24 @@
 </div>
 
 
-
+<!-- ofimatica-->
+  
+<section id="ofimatica">
+  <h3>Ofimática</h3>
+    <p>
+      Las hojas de cálculo, como Excel, son herramientas versátiles para la recolección y análisis de datos sobre biodiversidad. Permiten organizar datos de especies, abundancia, distribución y otros parámetros relevantes en tablas estructuradas. Además, facilitan la realización de cálculos básicos y la generación de gráficos para visualizar tendencias y patrones en los datos.
+    </p>
+    <ul>
+      <li><strong>Recolección de Datos:</strong> Las hojas de cálculo pueden utilizarse para capturar datos de campo o de laboratorio, como listas de especies, conteos de individuos, mediciones de biomasa, etc.</li>
+      <li><strong>Estructura de Datos:</strong> Se pueden crear tablas con columnas para diferentes variables y filas para cada registro o muestra, facilitando la organización y la posterior consulta de la información.</li>
+      <li><strong>Plantillas:</strong> GBIF proporciona plantillas preconfiguradas en Excel que ayudan a estandarizar la recolección de datos, asegurando que los datos cumplan con estándares como Darwin Core.</li>
+      <li><strong>Validación de Datos:</strong> Las hojas de cálculo permiten realizar validaciones básicas de los datos ingresados, como verificar rangos de valores o la consistencia de los datos, ayudando a reducir errores.</li>
+      <li><strong>Análisis de Datos:</strong> Se pueden realizar cálculos estadísticos simples, como promedios, desviaciones estándar, recuentos y porcentajes, para analizar la diversidad y abundancia de especies.</li>
+      <li><strong>Visualización:</strong> Las hojas de cálculo permiten generar gráficos básicos como diagramas de barras, gráficos circulares y gráficos de líneas para visualizar la distribución y tendencias de los datos.</li>
+      <li><strong>Exportación de Datos:</strong> Los datos se pueden exportar a otros formatos (como CSV o archivos de texto) para su uso en herramientas más avanzadas o para su publicación en bases de datos como GBIF.</li>
+      <li><strong>Herramientas Adicionales:</strong> Las hojas de cálculo pueden integrarse con otras herramientas como Tableau o PowerBI para análisis más complejos y visualizaciones más avanzadas.</li>
+    </ul>
+  </section>
 <!-- Área: Soporte Tecnico  -->
 <div class="area">
   <h2>Soporte tecnico </h2>
@@ -614,6 +632,7 @@
 
 </body>
 </html>
+
 
 
 
