--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   <a href="#programacion">Programación</a>
    <a href="#Soporte tecnico ">Soporte tecnico </a>
    <a href="#ofimatica">ofimatica </a>
-     <a href="#Sistema y Redes">sistema y redes </a>
+     <a href="#Sistema y redes">Sistema y redes </a>
 </nav>
 
 <!-- Biología -->
@@ -632,6 +632,7 @@
 
 </body>
 </html>
+
 
 
 
